build/ops: add missing libcap-ng-dev build dependency
Fixes: https://tracker.ceph.com/issues/42032
Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/debian/control
+++ b/debian/control
@@ -27,6 +27,7 @@ Build-Depends: cmake (>= 3.5),
                libbabeltrace-dev,
                libblkid-dev (>= 2.17),
 # Crimson      libc-ares-dev,
+               libcap-ng-dev,
 # Crimson      libcrypto++-dev,
                libcunit1-dev,
                libcurl4-openssl-dev,
