--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -166,6 +166,7 @@ BuildRequires:	gperftools-devel >= 2.4
 BuildRequires:	leveldb-devel > 1.2
 BuildRequires:	libaio-devel
 BuildRequires:	libblkid-devel >= 2.17
+BuildRequires:	libcap-ng-devel
 BuildRequires:	libcurl-devel
 BuildRequires:	libudev-devel
 BuildRequires:	libnl3-devel
