--- a/doc/releases/releases.yml
+++ b/doc/releases/releases.yml
@@ -2,7 +2,7 @@
 # there are two sections
 #
 # releases: ... for named releases
-# developement: ... for dev releases
+# development: ... for dev releases
 #
 # by default a `version` is interpreted as a sphinx reference when rendered (see
 # schedule.rst for the existing tags such as `_13.2.2`). If a version should not
