--- a/src/pybind/mgr/dashboard/frontend/package.json
+++ b/src/pybind/mgr/dashboard/frontend/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "npm run env_build && ng serve --host 0.0.0.0",
     "build": "npm run env_build && ng build",
+    "build:prod": "npm run env_build && for lang in cs de-DE en-US es-ES fr-FR id-ID it-IT ja-JP ko-KR pl-PL pt-BR zh-CN zh-TW; do ng build --prod --outputPath=dist/$lang --i18nFile=src/locale/messages.$lang.xlf --i18nFormat=xlf --i18nLocale=$lang; done",
     "env_build": "cp src/environments/environment.tpl.ts src/environments/environment.prod.ts && cp src/environments/environment.tpl.ts src/environments/environment.ts  && node ./environment.build.js",
     "i18n": "npm run i18n:extract && npm run i18n:push && npm run i18n:pull && npm run i18n:merge",
     "i18n:extract": "ng xi18n --i18n-format xlf --i18n-locale en-US --output-path locale --progress=false && ngx-extractor -i 'src/**/*.ts' -f xlf -o src/locale/messages.xlf -l en-US",
