--- a/src/pybind/mgr/dashboard/frontend/angular.json
+++ b/src/pybind/mgr/dashboard/frontend/angular.json
@@ -45,6 +45,7 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
+              "i18nMissingTranslation": "ignore",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
