--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -392,6 +392,13 @@ Recommends:    chrony
 %description base
 Base is the package that includes all the files shared amongst ceph servers
 
+%package -n ceph-daemon
+Summary:        Ceph-daemon utility to bootstrap Ceph clusters
+Requires:       podman
+%description -n ceph-daemon
+Ceph-daemon utility to bootstrap a Ceph cluster and manage ceph daemons
+deployed with systemd and podman.
+
 %package -n ceph-common
 Summary:	Ceph Common
 %if 0%{?suse_version}
@@ -583,6 +590,7 @@ Group:          System/Filesystems
 %endif
 Requires:       ceph-mgr = %{_epoch_prefix}%{version}-%{release}
 Requires:       python%{_python_buildid}-remoto
+Requires:       ceph-daemon = %{_epoch_prefix}%{version}-%{release}
 %description mgr-ssh
 ceph-mgr-ssh is a ceph-mgr module for orchestration functions using
 direct SSH connections for management operations.
@@ -1310,6 +1318,8 @@ chmod 0644 %{buildroot}%{_docdir}/ceph/sample.ceph.conf
 install -m 0644 -D COPYING %{buildroot}%{_docdir}/ceph/COPYING
 install -m 0644 -D etc/sysctl/90-ceph-osd.conf %{buildroot}%{_sysctldir}/90-ceph-osd.conf
 
+install -m 0755 src/ceph-daemon %{buildroot}%{_sbindir}/ceph-daemon
+
 # firewall templates and /sbin/mount.ceph symlink
 %if 0%{?suse_version}
 mkdir -p %{buildroot}/sbin
@@ -1462,6 +1472,9 @@ if [ $1 -ge 1 ] ; then
     source $SYSCONF_CEPH
   fi
 fi
+
+%files daemon
+%{_sbindir}/ceph-daemon
 
 %files common
 %dir %{_docdir}/ceph
