--- a/debian/control
+++ b/debian/control
@@ -166,6 +166,18 @@ Description: debugging symbols for ceph-base
  .
  This package contains the debugging symbols for ceph-base.
 
+Package: ceph-daemon
+Architecture: linux-any
+Depends: docker.io,
+	 ${python:Depends},
+Description: ceph-daemon utility to bootstrap ceph daemons with systemd and containers
+ Ceph is a massively scalable, open-source, distributed
+ storage system that runs on commodity hardware and delivers object,
+ block and file system storage.
+ .
+ The ceph-daemon utility is used to bootstrap a Ceph cluster and to manage
+ ceph daemons deployed with systemd and containers.
+
 Package: ceph-mds
 Architecture: linux-any
 Depends: ceph-base (= ${binary:Version}),
@@ -316,6 +328,7 @@ Description: kubernetes events plugin for ceph-mgr
 Package: ceph-mgr-ssh
 Architecture: all
 Depends: ceph-mgr (= ${binary:Version}),
+	 ceph-daemon,
 	 python-six,
          ${misc:Depends},
          ${python:Depends},
