--- a/debian/rules
+++ b/debian/rules
@@ -61,6 +61,8 @@ override_dh_auto_install:
 	install -D -m 644 etc/sysctl/90-ceph-osd.conf $(DESTDIR)/etc/sysctl.d/30-ceph-osd.conf
 	install -D -m 600 sudoers.d/ceph-osd-smartctl $(DESTDIR)/etc/sudoers.d/ceph-osd-smartctl
 
+	install -m 755 src/ceph-daemon $(DESTDIR)/usr/sbin/ceph-daemon
+
 # doc/changelog is a directory, which confuses dh_installchangelogs
 override_dh_installchangelogs:
 	dh_installchangelogs --exclude doc/changelog
