mgr/dashboard: frontend: add npm-run-all dependency
Signed-off-by: Ricardo Dias <rdias@suse.com>
(cherry picked from commit 5adc7552015c9e95c264c6a86fcbd4e79a49b2ac)

Conflicts:
        src/pybind/mgr/dashboard/frontend/package-lock.json
	src/pybind/mgr/dashboard/frontend/package.json
    The conflicts were due to changes in package dependencies that exist
    in master but were not backported.
    In this case we only want to backport the introduction of the
    npm-run-all package.

--- a/src/pybind/mgr/dashboard/frontend/package.json
+++ b/src/pybind/mgr/dashboard/frontend/package.json
@@ -122,6 +122,7 @@
     "jest-preset-angular": "6.0.2",
     "jest-silent-reporter": "0.1.2",
     "prettier": "1.16.4",
+    "npm-run-all": "^4.1.5",
     "protractor": "5.4.2",
     "replace-in-file": "3.4.3",
     "ts-node": "8.0.2",
