--- a/qa/suites/fs/upgrade/featureful_client/old_client/tasks/0-mimic.yaml
+++ b/qa/suites/fs/upgrade/featureful_client/old_client/tasks/0-mimic.yaml
@@ -11,6 +11,7 @@ tasks:
       - ceph-mgr-diskprediction-cloud
       - ceph-mgr-rook
       - ceph-mgr-ssh
+      - ceph-daemon
     extra_packages: ['librados2']
 - print: "**** done installing mimic"
 - ceph:
