mgr/dashboard: tox.ini fixes
Signed-off-by: Alfonso Martínez <almartin@redhat.com>

--- a/src/pybind/mgr/dashboard/tox.ini
+++ b/src/pybind/mgr/dashboard/tox.ini
@@ -15,11 +15,23 @@ addopts =
     --ignore=frontend/ --ignore=module.py
     --instafail
 
+[base]
+deps =
+    -r requirements.txt
+    -c constraints.txt
+
+[base-test]
+deps =
+    -r requirements-test.txt
+
+[base-lint]
+deps =
+    -r requirements-lint.txt
+
 [testenv]
 deps =
-    -rrequirements.txt
-    -cconstraints.txt
-    -rrequirements-test.txt
+    {[base]deps}
+    {[base-test]deps}
 setenv =
     CFLAGS = -DXMLSEC_NO_SIZE_T
     PYTHONUNBUFFERED=1
@@ -30,6 +42,11 @@ commands =
     pytest {posargs}
 
 [testenv:run]
+basepython=python3
+deps =
+    {[base]deps}
+    {[base-test]deps}
+    {[base-lint]deps}
 whitelist_externals = *
 commands = {posargs}
 
@@ -57,27 +74,48 @@ format = ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(co
 # Allow similarity/code duplication detection
 jobs = 1
 dirs = . controllers plugins services tests
-addopts =
-    -rn
-    --rcfile=.pylintrc
-    --jobs={[pylint]jobs}
+addopts = -rn --rcfile=.pylintrc --jobs={[pylint]jobs}
 
 [rstlint]
-dirs =
-    README.rst
-    HACKING.rst
+dirs = README.rst HACKING.rst
+
+[base-pylint]
+commands =
+    pylint {[pylint]addopts} {[pylint]dirs}
+
+[base-rst]
+commands =
+    rstcheck --report info --debug -- {[rstlint]dirs}
 
 [testenv:lint]
 basepython=python3
 deps =
-    -rrequirements.txt
-    -cconstraints.txt
-    -rrequirements-lint.txt
+    {[base]deps}
+    {[base-lint]deps}
 commands =
-    lint: flake8 {posargs}
-    lint: pylint {[pylint]addopts} {posargs:{[pylint]dirs}}
-    lint: rstcheck --report info --debug {posargs:{[rstlint]dirs}}
+    flake8
+    {[base-pylint]commands}
+    {[base-rst]commands}
 
+[testenv:flake8]
+basepython = python3
+deps = {[base-lint]deps}
+commands =
+    flake8 --config=tox.ini {posargs}
+
+[testenv:pylint]
+basepython = python3
+deps =
+    {[base]deps}
+    {[base-lint]deps}
+commands =
+    pylint {[pylint]addopts} {posargs:{[pylint]dirs}}
+
+[testenv:rst]
+basepython = python3
+deps = {[base-lint]deps}
+commands =
+    rstcheck --report info --debug -- {posargs:{[rstlint]dirs}}
 
 [autopep8]
 addopts =
@@ -92,7 +130,7 @@ addopts =
 [testenv:fix]
 basepython=python3
 deps =
-    -rrequirements-lint.txt
+    {[base-lint]deps}
 commands =
     python --version
     autopep8 {[autopep8]addopts} {posargs:.}
