--- a/src/test/crimson/cbt/radosbench_4K_read.yaml
+++ b/src/test/crimson/cbt/radosbench_4K_read.yaml
@@ -13,6 +13,7 @@ tasks:
         pool_profile: 'replicated'
         read_time: 30
         read_only: true
+        readmode: 'rand'
         prefill_time: 3
         acceptable:
           bandwidth: '(or (greater) (near 0.05))'
