--- a/src/test/rgw/CMakeLists.txt
+++ b/src/test/rgw/CMakeLists.txt
@@ -172,5 +172,4 @@ add_ceph_unittest(unittest_rgw_kms)
 target_link_libraries(unittest_rgw_kms ${rgw_libs})
 
 add_executable(ceph_test_rgw_gc_log test_rgw_gc_log.cc $<TARGET_OBJECTS:unit-main>)
-add_ceph_unittest(ceph_test_rgw_gc_log)
-target_link_libraries(ceph_test_rgw_gc_log radostest-cxx ${rgw_libs})
+target_link_libraries(ceph_test_rgw_gc_log ${rgw_libs} radostest-cxx)
