--- a/qa/suites/rados/mgr/tasks/dashboard.yaml
+++ b/qa/suites/rados/mgr/tasks/dashboard.yaml
@@ -34,13 +34,13 @@ tasks:
         - tasks.mgr.dashboard.test_cluster_configuration
         - tasks.mgr.dashboard.test_erasure_code_profile
         - tasks.mgr.dashboard.test_ganesha
-        - tasks.mgr.dashboard.test_health
+        # - tasks.mgr.dashboard.test_health
         - tasks.mgr.dashboard.test_host
         - tasks.mgr.dashboard.test_logs
         - tasks.mgr.dashboard.test_mgr_module
         - tasks.mgr.dashboard.test_monitor
         - tasks.mgr.dashboard.test_osd
-        - tasks.mgr.dashboard.test_perf_counters
+        # - tasks.mgr.dashboard.test_perf_counters
         - tasks.mgr.dashboard.test_pool
         - tasks.mgr.dashboard.test_rbd
         - tasks.mgr.dashboard.test_requests
