debian: explicitly set PYTHON2=OFF to prevent picking up python2 interpreter
Signed-off-by: Alfredo Deza <adeza@redhat.com>

--- a/debian/rules
+++ b/debian/rules
@@ -19,6 +19,7 @@ endif
 
 extraopts += -DWITH_OCF=ON -DWITH_LTTNG=ON
 extraopts += -DWITH_PYTHON3=ON -DWITH_MGR_DASHBOARD_FRONTEND=OFF
+extraopts += -DWITH_PYTHON2=OFF
 extraopts += -DWITH_CEPHFS_JAVA=ON
 extraopts += -DWITH_CEPHFS_SHELL=ON
 extraopts += -DWITH_SYSTEMD=ON -DCEPH_SYSTEMD_ENV_DIR=/etc/default
