--- a/qa/rgw_pool_type/ec.yaml
+++ b/qa/rgw_pool_type/ec.yaml
@@ -1,4 +1,7 @@
 overrides:
+  ceph:
+    log-whitelist:
+    - \(SLOW_OPS\) # see https://tracker.ceph.com/issues/41834
   rgw:
     ec-data-pool: true
   s3tests:
