--- a/src/python-common/tox.ini
+++ b/src/python-common/tox.ini
@@ -3,9 +3,13 @@ envlist = py27, py3, lint
 skip_missing_interpreters = true
 
 [testenv]
-deps=
-  pytest
-commands=py.test -v {posargs:ceph/tests}
+deps=-rrequirements.txt
+
+[testenv:py3]
+commands=python setup.py test --addopts="--mypy --mypy-ignore-missing-imports" {posargs}
+
+[testenv:py27]
+commands=python setup.py test {posargs}
 
 [tool:pytest]
 norecursedirs = .* _* virtualenv
