debian: remove python >= 2.7 requirement
Signed-off-by: Alfredo Deza <adeza@redhat.com>

--- a/debian/control
+++ b/debian/control
@@ -69,7 +69,6 @@ Build-Depends: cmake (>= 3.5),
                patch,
                pkg-config,
 # Crimson      protobuf-compiler,
-               python (>= 2.7),
                python3-all-dev,
                python3-cherrypy3,
 # Make-Check   python3-jwt,
@@ -77,7 +76,7 @@ Build-Depends: cmake (>= 3.5),
 # Make-Check   python3-pecan,
 # Make-Check   python3-bcrypt,
 # Make-Check   python3-six,
-# Make-Check   python3-tox | tox,
+# Make-Check   tox,
 # Make-Check   python3-coverage,
 # Make-Check   python3-openssl,
 # Make-Check   python3-prettytable,
