ceph-daemon: Add basic unittest infrastructure and cmake integration
To be able to write unittests, add a tox.ini (for testing in venvs)
and a first single test case as example.
Tests can be executed with eg:

$ tox

Or by running the usual:

$ ./run-make-check.sh

Signed-off-by: Thomas Bechtold <tbechtold@suse.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -491,6 +491,7 @@ endif()
 add_subdirectory(pybind)
 add_subdirectory(ceph-volume)
 add_subdirectory(python-common)
+add_subdirectory(ceph-daemon)
 
 # Monitor
 add_subdirectory(mon)
