qa/tasks/ceph2: pass ceph-daemon path to DaemonState
Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/tasks/ceph2.conf
+++ b/qa/tasks/ceph2.conf
@@ -1,4 +1,8 @@
 [global]
+# make logging friendly to teuthology
+log_to_file = true
+log_to_stderr = false
+
 mon clock drift allowed = 1.000
 
 # replicate across OSDs, not hosts
