ceph-daemon: Add basic mypy support
Add mypy support and some type hints to be able to do static code
analysis.

Signed-off-by: Thomas Bechtold <tbechtold@suse.com>

--- a/src/ceph-daemon/tox.ini
+++ b/src/ceph-daemon/tox.ini
@@ -1,8 +1,13 @@
 [tox]
-envlist = py27, py3
+envlist = py27, py3, mypy
 
 [testenv]
 skipsdist=true
 skip_install=true
 deps = pytest
 commands=pytest {posargs}
+
+[testenv:mypy]
+basepython = python3
+deps = mypy
+commands = mypy {posargs:ceph-daemon}
