librados-config: refactor to use boost::program_options
for two reasons:

* since this program does not parse or read ceph options, there is no
  need to link against libglobal. the advantage of removing this linkaga
  is that we can have smaller executable, and smaller debuginfo package.
* better readability and less LOC.

for better readability

Fixes: https://tracker.ceph.com/issues/42782
Signed-off-by: Kefu Chai <kchai@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -480,7 +480,7 @@ add_subdirectory(mgr)
 set(librados_config_srcs
   librados-config.cc)
 add_executable(librados-config ${librados_config_srcs})
-target_link_libraries(librados-config librados global ${BLKID_LIBRARIES} ${CMAKE_DL_LIBS} ${GSSAPI_LIBRARIES})
+target_link_libraries(librados-config librados Boost::program_options)
 
 install(TARGETS librados-config DESTINATION bin)
 
