librbd: refactor CreateNonPrimaryRequest and CreatePrimaryRequest
to extract re-usable functions into utils

Signed-off-by: Mykola Golub <mgolub@suse.com>

--- a/src/librbd/CMakeLists.txt
+++ b/src/librbd/CMakeLists.txt
@@ -113,6 +113,7 @@ set(librbd_internal_srcs
   mirror/snapshot/SetImageStateRequest.cc
   mirror/snapshot/Types.cc
   mirror/snapshot/UnlinkPeerRequest.cc
+  mirror/snapshot/Utils.cc
   mirror/snapshot/WriteImageStateRequest.cc
   object_map/CreateRequest.cc
   object_map/InvalidateRequest.cc
