qa/tests: reduced number of nodes used for tests
Signed-off-by: Yuri Weinstein <yweinste@redhat.com>

--- a/qa/suites/upgrade/mimic-x/parallel/0-cluster/start.yaml
+++ b/qa/suites/upgrade/mimic-x/parallel/0-cluster/start.yaml
@@ -13,11 +13,11 @@ roles:
   - mds.a
   - osd.0
   - osd.1
-- - mon.b
+  - mon.b
   - mgr.y
   - osd.2
   - osd.3
-- - mon.c
+  - mon.c
   - mds.b
   - osd.4
   - osd.5
