add a exec command to install the perl Amazon::S3 module needed for perl workunits

--- a/qa/suites/rgw/multifs/tasks/rgw_bucket_quota.yaml
+++ b/qa/suites/rgw/multifs/tasks/rgw_bucket_quota.yaml
@@ -2,6 +2,9 @@ tasks:
 - install:
 - ceph:
 - rgw: [client.0]
+- exec:
+    client.0:
+      - cpan install Amazon::S3
 - workunit:
     clients:
       client.0:
